# onsides

./: .gitignore  404.html  AGENTS.md  AGENT_UPDATE_GUIDE.md  ANNOTATION.md  CHANGELOG.md  CNAME  DATABASE.md  HUMAN_UPDATE_GUIDE.md  LICENSE  MODEL_TRAINING.md  PERFORMANCE.md  README.V01.md  README.md  SCHEMA.md  UPDATE_INSTRUCTIONS.md  VERSIONING.md  analysis.json  data  experiments.json  flake.nix  index.html  index.md  pyproject.toml  releases.json  replicates  requirements.txt  sitemap.xml
onsides_intl/: DATABASE_INTL.md  LABELDATA_INTL.md  LABELSCHEMA_INTL.md  ONSIDES_INTL.md  SCHEMA_INTL.md  api_keys.json  pyproject.toml
onsides_intl/external_data/: EXTERNAL_DATA.md  build_umls_database.ipynb
onsides_intl/onsides_eu/: DATABASE_EU.md  pyproject.toml
onsides_intl/onsides_eu/final_data/: NOTE.md
onsides_intl/onsides_eu/notebooks/: 1-0.obtain_data.ipynb  1-1.format_labels_xmlcsv.ipynb  1.obtain_data.ipynb  2-0.extract_data.ipynb  2-1.parse_tabular_data.ipynb  2.extract_data.ipynb  3-0.term_extraction_ade.ipynb  3-1.term_extraction_serious_ade.ipynb  3-2.term_extraction_ped_ade.ipynb  3.parse_tabular_data.ipynb  4.run_data.ipynb  5.build_tables.ipynb
onsides_intl/onsides_eu/src/: build_onsides_eu.py  compute_onsides_eu.py  download_files.py  map_drugs_to_rxnorm.py  parse_files.py  tabular_data_mapping.py  text_data_format.py  text_data_parse.py  text_data_predict.py
onsides_intl/onsides_eu/src/onsides_eu/: download_files.py  functions.py  (+6 more)
onsides_intl/onsides_jp/: DATABASE_JP.md
onsides_intl/onsides_jp/notebooks/: 1-0.download_raw_files.ipynb  1-1.data_to_xmlcsv.ipynb  1.download_raw_files.ipynb  2.parse_labels.ipynb  3-0.term_extraction_ade.ipynb  3-1.term_extraction_serious_ade.ipynb  3-2.term_extraction_specific_populations.ipynb  3.term_extraction_ade.ipynb  4.map_drug_kegg_to_rxnorm.ipynb  5.format_tables.ipynb
onsides_intl/onsides_jp/src/: build_onsides_jp.py  compute_onsides_jp.py  download_files.py  extract_ades.py  extract_ades_functions.py  functions.py  map_drugs_to_rxnorm.py  predict_ades.py
onsides_intl/onsides_uk/: DATABASE_UK.md
onsides_intl/onsides_uk/notebooks/: 1-0.download_raw_files.ipynb  1-1.data_to_xmlcsv.ipynb  1.obtain_data.ipynb  2.map_drugs_to_rxnorm.ipynb  2.parse_labels.ipynb  3-0.term_extraction_ade.ipynb  3-1.term_extraction_ade_serious_ade.ipynb  3-2.term_extraction_specific_populations.ipynb  3.parse_labels.ipynb  4.build_tables.ipynb  5.build_tables.ipynb  DEFUNCT.obtain_data.ipynb
onsides_intl/onsides_uk/src/: build_onsides_uk.py  compute_onsides_uk.py  download_files.py  map_drugs_to_rxnorm.py  parse_files.py  tabular_data_mapping.py  text_data_format.py  text_data_predict.py
(+332 files in other folders)
