[project]
name = "onsides"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Michael Zietz", email = "michael.zietz@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "aiofiles>=24.1.0",
    "aiolimiter>=1.2.1",
    "aiosqlite>=0.21.0",
    "attrs>=25.1.0",
    "beautifulsoup4>=4.13.3",
    "camelot-py>=1.0.0",
    "httpx>=0.28.1",
    "pandas>=2.2.3",
    "polars>=1.22.0",
    "pyahocorasick>=2.1.0",
    "pyarrow>=19.0.0",
    "pydantic>=2.10.6",
    "pypdf2>=3.0.1",
    "rich>=13.9.4",
    "sqlalchemy[asyncio]>=2.0.38",
    "sqlmodel>=0.0.22",
    "typer>=0.15.1",
]

[project.scripts]
onsides = "onsides.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
