[project]
name = "onsides_intl"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
  "beautifulsoup4>=4.12.3",
  "numpy>=2.1.3",
  "openai>=1.56.0",
  "orjson>=3.10.12",
  "pandas",
  "polars>=1.16.0",
  "pydantic>=2.10.2",
  "pypdf2>=3.0.1",
  "requests>=2.32.3",
  "sqlmodel>=0.0.22",
  "tabula-py[jpype]>=2.10.0",
  "torch>=2.5.1",
  "tqdm>=4.67.1",
  "transformers>=4.46.3",
  "wget>=3.2",
]

[tool.uv.workspace]
members = []
