[project]
name = "onsides-eu"
version = "0.1.0"
description = "ONSIDES European Union"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pyahocorasick>=2.1.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/onsides_eu"]
